fix: m1macで動作確認

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    platform: linux/amd64
     environment:
       PMA_ARBITRARY: 1
       PMA_HOST: db
