feat: 画像を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./db/save_data:/var/lib/mysql
       - ./db/init:/docker-entrypoint-initdb.d
+    user: 1000:1000
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: fuel_dev
